kubernetes/apps/default/smtp-relay/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: smtp-relay
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: smtp-relay
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: "<path:kubernetes/data/internal/smtp-relay#EGRESS_HOST>"
